Add kernel Adiutor
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2185,5 +2185,8 @@
             android:label="@string/Lockscreen_notifications_header" >
         </activity>
 
+        <!-- Kernel Adiutor -->
+        <activity android:name="com.grarak.kerneladiutor.MainActivity"/>
+
     </application>
 </manifest>
