Settings: Modify LSN (1/2)
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2201,5 +2201,10 @@
                 android:value="com.android.settings.xoplax.RamBar" />
         </activity>
 
+        <activity
+            android:name=".xoplax.lsn.LockscreenNotifications"
+            android:label="@string/Lockscreen_notifications_header" >
+        </activity>
+
     </application>
 </manifest>
