Settings: Modify XOS Inside (1/2)
Signed-off-by: Estiko <estiko@mediaqu.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1788,6 +1788,45 @@
             android:theme="@style/CryptKeeperBlankTheme"
         />
 
+        <!-- XoplaX OS activities Start -->
+        <activity android:name="Settings$XOSSettingsActivity"
+                android:label="@string/interface_settings_title"
+                android:taskAffinity=""
+                android:excludeFromRecents="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.xoplax.XoplaXSettings" />
+            <meta-data android:name="com.android.settings.TOP_LEVEL_HEADER_ID"
+                android:resource="@+id/xoplax_settings" />
+        </activity>
+
+        <!-- Kernel Adiutor -->
+        <activity android:name="com.grarak.kerneladiutor.MainActivity"/>
+
+        <!-- RAM bar -->
+        <activity android:name=".xoplax.RamBar" />
+
+        <!-- Pseudo-activity used to provide an intent-filter entry point to ass display rotation config -->
+        <activity android:name="Settings$ASSRamBarActivity"
+                android:label="@string/ram_bar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.android.settings.xoplax.RamBar" />
+        </activity>
+
+        <activity
+            android:name=".xoplax.lsn.LockscreenNotifications"
+            android:label="@string/Lockscreen_notifications_header" >
+        </activity>
+
+        <!-- XoplaX OS activities End -->
+
         <!-- CyanogenMod activities Start -->
         <activity android:name="Settings$QuickSettingsConfigActivity"
                 android:label="@string/tile_picker_title"
@@ -2183,28 +2222,6 @@
         </service>
 
         <service android:name=".search.SearchPopulator"/>
-
-        <!-- Kernel Adiutor -->
-        <activity android:name="com.grarak.kerneladiutor.MainActivity"/>
-
-        <!-- RAM bar -->
-        <activity android:name=".xoplax.RamBar" />
-
-        <!-- Pseudo-activity used to provide an intent-filter entry point to ass display rotation config -->
-        <activity android:name="Settings$ASSRamBarActivity"
-                android:label="@string/ram_bar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.xoplax.RamBar" />
-        </activity>
-
-        <activity
-            android:name=".xoplax.lsn.LockscreenNotifications"
-            android:label="@string/Lockscreen_notifications_header" >
-        </activity>
 
     </application>
 </manifest>
